Refactored SourceLoader