@@ -6,6 +6,8 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Loads source code lines.
@@ -20,11 +22,12 @@ public class SourceLoader {
 
     private List<String> loadFile(File sourceFile) throws IOException {
         List<String> source = new ArrayList<>();
+
         if (sourceFile.isFile()) {
-            source = Files.lines(Paths.get(sourceFile.getPath())).toList();
-        }
-        else
-        {
+            try (Stream<String> lines = Files.lines(Paths.get(sourceFile.getPath()))) {
+                source = lines.collect(Collectors.toList());
+            }
+        } else {
             source.add("Cannot access source code file: " + sourceFile.getAbsolutePath());
         }
         return source;
